fix topbar color

--- a/dots/user/.config/yasb/styles.css
+++ b/dots/user/.config/yasb/styles.css
@@ -15,7 +15,7 @@
 /* GLOBAL */
 * {
 	/* font-size: 14px; */
-	/* color: #eee; */
+	color: #eee;
 	font-weight: 600;
 	/* font-family: "Segoe UI", "UbuntuSansMono NFP"; */
 	/* margin: 0;
